methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:47: error: not found: value growFLowers
  growFLowers()
  ^FlowerCase:60: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime3.FlowerCase'
def run() {
    ^